--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>ZOIO TE DESAFIO EXTENDED</h1>
+            <p>#Everson zoio</p>
         </div>
 
         <div>
