--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>ZOIO TE DESAFIO EXTENDED</h1>
-            <p>#Everson zoio</p>
+            <p>#Musica do Everson Zoio feita por IA</p>
         </div>
 
         <div>
