--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="https://youtu.be/W1zgen5kW-4?si=BVahpRS2dPaaK5In">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
