--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://youtu.be/W1zgen5kW-4?si=BVahpRS2dPaaK5In">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://youtu.be/W1zgen5kW-4?si=LozbpjxfumTte5mT" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+                <img src="https://youtu.be/N0m_mTZcdfE?si=AiSZimxR5thmdCC3" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+                <img src="https://youtu.be/CdGe57Ygsi0?si=VBkNjZunpCpFQU7G" />
             </a>
             <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+                <img src="https://youtu.be/VauWokLzIco?si=pgld4l-jl_vkTnw4" />
             </a>
             <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+                <img src="https://youtu.be/r4kSpKBff24?si=8vSW-DhtjaP1KbrB" />
             </a>
         </div>
     </section>
