--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ZOIO TE DESAFIO EXTENDED</h1>
-            <p>#Musica do Everson Zoio feita por IA</p>
+            <h1>SKIBIDI TOILET 79 É BOM?</h1>
+            <p>#Skibidi Toilet ep 79 onde a aliança é atacada pelos astros e um dos seus infectado, Watchman of Doom, "titan tv man" e a volta de Titan Speakerman 3.0</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wxspSC7_JGA?si=3cQJa5-mg9zj5xRH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mDxwpM0zPug?si=oe5Kxo_n_04th1RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
