--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+            <a href="https://youtu.be/W1zgen5kW-4?si=LozbpjxfumTte5mT">
                 <img src="https://youtu.be/W1zgen5kW-4?si=LozbpjxfumTte5mT" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://youtu.be/N0m_mTZcdfE?si=AiSZimxR5thmdCC3" />
+            <a href="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3">
+                <img src="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+            <a href="https://youtu.be/CdGe57Ygsi0?si=VBkNjZunpCpFQU7G">
                 <img src="https://youtu.be/CdGe57Ygsi0?si=VBkNjZunpCpFQU7G" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+            <a href="https://youtu.be/VauWokLzIco?si=pgld4l-jl_vkTnw4">
                 <img src="https://youtu.be/VauWokLzIco?si=pgld4l-jl_vkTnw4" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+            <a href="https://youtu.be/r4kSpKBff24?si=8vSW-DhtjaP1KbrB">
                 <img src="https://youtu.be/r4kSpKBff24?si=8vSW-DhtjaP1KbrB" />
             </a>
         </div>
