--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <a href="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3">
                 <img src="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3" />
             </a>
-            <a href="https://youtu.be/CdGe57Ygsi0?si=VBkNjZunpCpFQU7G">
+            <a href="https://www.youtube.com/watch?v=CdGe57Ygsi0">
                 <img src="https://youtu.be/CdGe57Ygsi0?si=VBkNjZunpCpFQU7G" />
             </a>
-            <a href="https://youtu.be/VauWokLzIco?si=pgld4l-jl_vkTnw4">
+            <a href="https://www.youtube.com/watch?v=VauWokLzIco">
                 <img src="https://youtu.be/VauWokLzIco?si=pgld4l-jl_vkTnw4" />
             </a>
-            <a href="https://youtu.be/r4kSpKBff24?si=8vSW-DhtjaP1KbrB">
+            <a href="https://www.youtube.com/watch?v=r4kSpKBff24">
                 <img src="https://youtu.be/r4kSpKBff24?si=8vSW-DhtjaP1KbrB" />
             </a>
         </div>
