--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=W1zgen5kW-4">
-                <img src="https://youtu.be/W1zgen5kW-4?si=LozbpjxfumTte5mT" />
+                <img src="https://youtu.be/W1zgen5kW-4?si=W1zgen5kW-4" />
             </a>
             <a href="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3">
                 <img src="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3" />
