--- a/index.html
+++ b/index.html
@@ -23,27 +23,26 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/mDxwpM0zPug?si=oe5Kxo_n_04th1RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-
-    <section class="categoria">
-        <h2>Filmes e séries</h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=W1zgen5kW-4">
-    <img src=https://img.youtube.com/vi/W1zgen5kW-4/hqdefault.jpg alt="Thumbnail do vídeo">
-            </a>
-            <a href="https://youtu.be/N0m_m"TZcdfE?si=AiSZimxR5thmdCC3">
-    <img src="https://img.youtube.com/vi/VBkNjZunpCpFQU7G/maxresdefault.jpg" alt="Thumbnail do vídeo">
-            </a>
-            <a href="https://www.youtube.com/watch?v=CdGe57Ygsi0">
-                <img src="https://youtu.be/CdGe57Ygsi0?si=VBkNjZunpCpFQU7G" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=VauWokLzIco">
-                <img src="https://youtu.be/VauWokLzIco?si=pgld4l-jl_vkTnw4" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=r4kSpKBff24">
-                <img src="https://youtu.be/r4kSpKBff24?si=8vSW-DhtjaP1KbrB" />
-            </a>
-        </div>
-    </section>
+<section class="categoria">
+    <h2>Filmes e séries</h2>
+    <div class="categoria-videos">
+        <a href="https://www.youtube.com/watch?v=W1zgen5kW-4">
+            <img src="https://img.youtube.com/vi/W1zgen5kW-4/hqdefault.jpg" alt="Thumbnail do vídeo">
+        </a>
+        <a href="https://youtu.be/N0m_mTZcdfE?si=AiSZimxR5thmdCC3">
+            <img src="https://img.youtube.com/vi/N0m_mTZcdfE/hqdefault.jpg" alt="Thumbnail do vídeo">
+        </a>
+        <a href="https://www.youtube.com/watch?v=CdGe57Ygsi0">
+            <img src="https://img.youtube.com/vi/CdGe57Ygsi0/hqdefault.jpg" alt="Thumbnail do vídeo">
+        </a>
+        <a href="https://www.youtube.com/watch?v=VauWokLzIco">
+            <img src="https://img.youtube.com/vi/VauWokLzIco/hqdefault.jpg" alt="Thumbnail do vídeo">
+        </a>
+        <a href="https://www.youtube.com/watch?v=r4kSpKBff24">
+            <img src="https://img.youtube.com/vi/r4kSpKBff24/hqdefault.jpg" alt="Thumbnail do vídeo">
+        </a>
+    </div>
+</section>
 
 </body>
 
