--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <section class="categoria">
     <h2>Filmes e séries</h2>
     <div class="categoria-videos">
-        <a href="https://www.youtube.com/watch?v=W1zgen5kW-4">
-            <img src="https://img.youtube.com/vi/W1zgen5kW-4/hqdefault.jpg" alt="Thumbnail do vídeo">
+        <a href="https://www.youtube.com/watch?v=J79Y1xO6W_Q">
+            <img src="https://youtu.be/J79Y1xO6W_Q?si=dX0QmQuRTmrVcSZs" alt="Thumbnail do vídeo">
         </a>
         <a href="https://youtu.be/N0m_mTZcdfE?si=AiSZimxR5thmdCC3">
             <img src="https://img.youtube.com/vi/AiSZimxR5thmdCC3/hqdefault.jpg" alt="Thumbnail do vídeo">
