--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <a href="https://www.youtube.com/watch?v=J79Y1xO6W_Q">
        <img src="https://img.youtube.com/vi/J79Y1xO6W_Q/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
-        <a href="https://www.youtube.com/watch?v=9B2JXL_4cQA">
-            <img src="https://img.youtube.com/vi/9B2JXL_4cQA/hqdefault.jpg" alt="Thumbnail do vídeo">
+        <a href="https://www.youtube.com/watch?v=Umgibls3uFI">
+            <img src="https://img.youtube.com/vi/Umgibls3uFI/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
         <a href="https://www.youtube.com/watch?v=CdGe57Ygsi0">
             <img src="https://img.youtube.com/vi/CdGe57Ygsi0/hqdefault.jpg" alt="Thumbnail do vídeo">
