--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <a href="https://www.youtube.com/watch?v=Umgibls3uFI">
             <img src="https://img.youtube.com/vi/Umgibls3uFI/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
-        <a href="https://www.youtube.com/watch?v=CdGe57Ygsi0">
-            <img src="https://img.youtube.com/vi/CdGe57Ygsi0/hqdefault.jpg" alt="Thumbnail do vídeo">
+        <a href="https://www.youtube.com/watch?v=fUcPA64NzvY">
+            <img src="https://img.youtube.com/vi/fUcPA64NzvY/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
-        <a href="https://www.youtube.com/watch?v=VauWokLzIco">
-            <img src="https://img.youtube.com/vi/VauWokLzIco/hqdefault.jpg" alt="Thumbnail do vídeo">
+        <a href="https://www.youtube.com/watch?v=op0XPw-iAygo">
+            <img src="https://img.youtube.com/vi/op0XPw-iAygo/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
         <a href="https://www.youtube.com/watch?v=r4kSpKBff24">
             <img src="https://img.youtube.com/vi/r4kSpKBff24/hqdefault.jpg" alt="Thumbnail do vídeo">
