--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <a href="https://www.youtube.com/watch?v=op0XPw-iAygo">
             <img src="https://img.youtube.com/vi/op0XPw-iAygo/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
-        <a href="https://www.youtube.com/watch?v=r4kSpKBff24">
-            <img src="https://img.youtube.com/vi/r4kSpKBff24/hqdefault.jpg" alt="Thumbnail do vídeo">
+        <a href="https://www.youtube.com/watch?v=iHGPxkQMkZs&t=518s">
+            <img src="https://img.youtube.com/vi/iHGPxkQMkZs&t/hqdefault.jpg" alt="Thumbnail do vídeo">
         </a>
     </div>
 </section>
